fix images urls

--- a/testcssstyle.css
+++ b/testcssstyle.css
@@ -25,7 +25,7 @@ h3 {
     align-items: center;
     font-size: 3rem;
     padding: 0.1em;
-    background-image: url("media/ocean.jpg");
+    background-image: url("https://cdn.pixabay.com/photo/2016/04/15/04/02/water-1330252_960_720.jpg");
     background-size: cover;
 }
 
